--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "Проект Mesto фронтенд + бэкенд",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "lint": "npx eslint .",
     "start": "node app.js",
@@ -17,7 +17,6 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
